force-app/src/objects/ffr__InquiryTemplateColumn__c.object
<CustomObject>
    <description>Stores details of a column that has been added to an action view template.</description>
    <fields>
        <fullName>ffr__ColumnWidth__c</fullName>
        <label>Column Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__ConditionFalseFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ConditionFalseTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ConditionToValue__c</fullName>
        <label>Condition To Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ConditionTrueFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ConditionTrueTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ConditionValue__c</fullName>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>in range</fullName>
                </value>
                <value>
                    <fullName>not in range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__DataViewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Field</label>
        <referenceTo>ffr__DataViewField__c</referenceTo>
        <relationshipLabel>Action View Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__DecimalPlaces__c</fullName>
        <label>Decimal Places</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__DrillInquiryTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Drill Action View Template</label>
        <referenceTo>ffr__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Drill Action View Template Columns</relationshipLabel>
        <relationshipName>DrillInquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__FormulaDp__c</fullName>
        <label>Formula Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__InquiryTemplate__c</fullName>
        <label>Action View Template</label>
        <referenceTo>ffr__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Action View Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__NegativeFillColor__c</fullName>
        <label>Negative Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__NegativeNumberFormat__c</fullName>
        <label>Negative Number Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parenthesis</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                    <default>true</default>
                    <label>Signed</label>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__NegativeTextColor__c</fullName>
        <label>Negative Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__PositiveFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__PositiveTextColor__c</fullName>
        <label>Positive Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Scaling__c</fullName>
        <label>Scaling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scale to Nearest Thousand</fullName>
                </value>
                <value>
                    <fullName>Scale to Nearest Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ShowNumberSeparators__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Separators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__ShowSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Total This Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ValueType__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotNumber</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action View Template Column</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action View Template Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>